testsuite/tests/letrec-disallowed/generic_arrays.ocaml.reference
Characters 188-198:
  let f z = let rec x = [| y; z |] and y = z in x;;
                        ^^^^^^^^^^
Error: This kind of expression is not allowed as right-hand side of `let rec'

